@@ -11,5 +11,3 @@ add soissons and franks and other countries:
     * war 
     * focus tree
     * couple events
-
-finish flags
